@@ -164,6 +164,7 @@ ui.dox.filters=Filters
 ui.dox.services=Services
 ui.dox.freeMarker=Free Marker Templates
 ui.dox.pointValueImport=Point value import
+ui.dox.dataPointSelector=Data point selector
 
 ui.app.agreeToLicense=Welcome to Mango Automation
 ui.app.downloadEula=Download Mango license agreement as PDF
