@@ -94,6 +94,17 @@
                                         </md-menu-content>
                                     </md-menu>
                                 </md-menu-item>
+
+                                <md-menu-divider></md-menu-divider>
+
+                                <md-menu-item>
+                                    <md-button ui-sref="ui.help.dataPointSelector">
+                                        <div layout="row" flex>
+                                            <md-icon md-menu-align-target>help</md-icon>
+                                            <div flex ma-tr="ui.app.viewHelpPage"></div>
+                                        </div>
+                                    </md-button>
+                                </md-menu-item>
                             </md-menu-content>
                         </md-menu>
                     </md-menu-bar>
