@@ -1,0 +1,14 @@
+<div class="ma-help-doc-container">
+    <h1 ma-tr="ui.dox.dataPointSelector"></h1>
+    <h2>Warnings</h2>
+    <p><strong>Filtering</strong> and <strong>Ordering</strong> the data point select may result in a slow response.</p>
+
+    <h2>Tips and tricks</h2>
+    <ul>
+        <li>Adding <code>*</code> to your filter will make it match zero or more characters</li>
+        <li>Adding <code>?</code> to your filter will make it match exactly one character</li>
+        <li>The default behavior is exact matching and is equivalent to adding <code>=</code> to the start of the
+            filter.</li>
+        <li>If you start the filter with <code>!=</code> you will get a not equals comparison</li>
+    </ul>
+</div>
